--- a/public/backend/custom.css
+++ b/public/backend/custom.css
@@ -1,6 +1,6 @@
 
 body, h1, h2, h3, h4, h5, h6, p,a,span, .navigation-menu>li>a{
-    font-family: 'Almarai', sans-serif;
+    font-family: 'Cairo', sans-serif;
 }
 
 /* body{
